--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Test
 description: Test
 baseurl: "/Test" # the subpath of your site, e.g. /blog
+remote_theme: pmarsceill/just-the-docs
 url: "https://3dprintedhumanrobotinterface.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
